[package]
name = "rustyline"
version = "10.0.0"
authors = ["Katsu Kawakami <kkawa1570@gmail.com>"]
edition = "2018"
description = "Rustyline, a readline implementation based on Antirez's Linenoise"
documentation = "http://docs.rs/rustyline"
repository = "https://github.com/kkawakam/rustyline"
readme = "README.md"
keywords = ["readline"]
license = "MIT"
categories = ["command-line-interface"]

exclude = [
  "/.github/*",
  "/rustfmt.toml",
]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["rustyline-derive"]

[dependencies]
bitflags = "1.3"
cfg-if = "1.0"
# For file completion
# https://rustsec.org/advisories/RUSTSEC-2020-0053.html
dirs-next = { version = "2.0", optional = true }
# For History
fd-lock = "3.0.0"
libc = "0.2"
log = "0.4"
unicode-width = "0.1"
unicode-segmentation = "1.0"
memchr = "2.0"
# For custom bindings
radix_trie = { version = "0.2", optional = true }
regex = { version = "1.5.5", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", default-features = false, features = ["fs", "ioctl", "poll", "signal", "term"] }
utf8parse = "0.2"
skim = { version = "0.10", optional = true }
signal-hook = { version = "0.3", optional = true, default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "synchapi", "minwindef", "processenv", "std", "winbase", "wincon", "winuser"] }
scopeguard = "1.1"
clipboard-win = "4.2.1"

[dev-dependencies]
doc-comment = "0.3"
env_logger = { version = "0.9", default-features = false }
tempfile = "3.1.0"
rand = "0.8"
assert_matches = "1.2"
rustyline-derive = { version = "0.7.0", path = "rustyline-derive" }

[features]
default = ["custom-bindings", "with-dirs"]
custom-bindings = ["radix_trie"]
with-dirs = ["dirs-next"]
with-fuzzy = ["skim"]
case_insensitive_history_search = ["regex"]

[package.metadata.docs.rs]
features = ["custom-bindings", "with-dirs", "with-fuzzy"]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
